--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ body{
     justify-content: space-between;
     align-items:center;
     position:fixed;
+    top: 0;
+    height: 100px;
     width:100%;
 }
 .header i{
@@ -23,19 +25,26 @@ body{
 }
 .headerLogo{
     width:18%;
+    height: 100px;
+    display:flex;
+    align-items: center;
+    overflow:hidden;
+}
+.headerLogo > img{
+    width:100%;
+    overflow: hidden;
 }
 .headerLinks{
     display: flex;
     padding: 0 20px 0 0;
 }
-.verticalHeader{
+#verticalHeader{
     position: fixed;
     left: -200px;
     width:200px;
     background-color:gray;
     transition: all 0.5s;
     height:100%;
-
 }
 .verticalHeaderLinks{
     display:flex;
@@ -60,6 +69,7 @@ body{
     align-items: center;
     background-color:#F1A536;
     padding: 15px 0;
+    margin-top: 100px;
 }
 
 .mainImage{
@@ -174,11 +184,17 @@ body{
         display:none;
     }
     .header{
-        align-content:flex-end;
+        flex-direction: row-reverse;
     }
     .header i{
         display:inline;
         padding: 0 20px 0 0;
+    }
+}
+@media (min-width: 701px)
+{
+    #verticalHeader{
+        left:-200px;
     }
 }
 /* *{
@@ -192,7 +208,7 @@ form {
     padding:30px;
     background-color: gray;
     width:80%;
-    margin: 10px auto 0;
+    margin: 100px auto 0;
 }
 form > div{
     display:flex;
