--- a/css/menu.css
+++ b/css/menu.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items:center;
     position:fixed;
-    top: 0px;
+    top: 0;
     height:75px;
     width:100%;
     margin-top:100px;
