--- a/css/menu.css
+++ b/css/menu.css
@@ -35,6 +35,9 @@
     flex-direction: column;
     width:25%;
     padding: 10px 20px;
+    background-color:white;
+    border-radius: 20px;
+    border: 4px solid black;
 }
 .menuSection > h1{
     text-align: center;
@@ -59,6 +62,7 @@
     width:100%;
     margin-bottom: 50px;
     align-self: center;
+    border: 4px solid black;
 }
 /*#dessertsMenu > .menuSection > img{*/
 /*    width:auto;*/
