--- a/css/about.css
+++ b/css/about.css
@@ -8,9 +8,11 @@
     align-items:center;
     padding: 0 10px;
     width:calc(50% - 20px);
+    margin-bottom: 20px;
 }
 .mapImage{
     width:70%;
+    margin-bottom:20px;
 }
 .mapsTable{
     border: 5px black solid;
@@ -28,6 +30,10 @@
     flex-direction: column;
     align-items: center;
     width:calc(50% - 20px);
+    padding: 20px;
+    background-color:white;
+    border-radius: 20px;
+    margin: 0 20px 20px 20px;
 }
 .faq > span{
     font-size: 3vw;
@@ -42,6 +48,7 @@
     padding: 20px 0;
     display:flex;
     flex-direction: column;
+    align-self: flex-start;
 }
 .question:hover{
     cursor:pointer;
