--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body{
     height: 100px;
     width:calc(100% - 30px);
     padding: 0 15px;
+    border-bottom: 6px solid black;
 }
 .header i{
     font-size:3em;
