--- a/css/apply.css
+++ b/css/apply.css
@@ -13,3 +13,28 @@ input[type="reset"],input[type="submit"]{
     border-radius: 5px;
     border: 3px solid black;
 }
+form {
+    padding:30px;
+    background-color: gray;
+    width:80%;
+    margin: 100px auto 0;
+}
+form > div{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
+    align-items:center;
+}
+textarea, select, input{
+    width:100%;
+    background-color:#dadfea;
+}
+.workHistory, .availability{
+    display:flex;
+    flex-direction: column;
+    text-align:center;
+    align-items:center;
+}
+.availability > div{
+    display:flex;
+}
